--- a/word-addin/src/taskpane/taskpane.html
+++ b/word-addin/src/taskpane/taskpane.html
@@ -117,6 +117,7 @@
             margin: 0;
             text-align: justify;
             text-justify: inter-word;
+			
         }
     </style>
 </head>
@@ -140,12 +141,12 @@
         <div class="features-card">
             <strong>რას აკეთებს ეს პროგრამა?</strong>
             <p class="description-text">
-                ეს არის დამხმარე ინსტრუმენტი ქართულენოვანი ტექსტების სწორი ფორმატირებისთვის. 
-                პროგრამა ავტომატურად ყოფს სიტყვებს მარცვლებად და სვამს გადატანის ნიშნებს იქ, 
-                სადაც ეს გრამატიკულად და სტამბური წესების მიხედვითაა საჭირო. 
-                შედეგად, თქვენ იღებთ ვიზუალურად გამართულ და პროფესიონალურად დალაგებულ 
-                ტექსტს Word-ის დოკუმენტში.
-            </p>
+			ეს არის დამ&shy;ხმა&shy;რე ინსტ&shy;რუ&shy;მენ&shy;ტი ქარ&shy;თუ&shy;ლე&shy;ნო&shy;ვა&shy;ნი ტექ&shy;სტე&shy;ბის სწო&shy;რი ფორ&shy;მა&shy;ტი&shy;რე&shy;ბის&shy;თვის. 
+			პროგ&shy;რა&shy;მა ავ&shy;ტო&shy;მა&shy;ტუ&shy;რად ყოფს სიტყვებს მარც&shy;ვლე&shy;ბად და სვამს გა&shy;და&shy;ტა&shy;ნის ნიშ&shy;ნებს იქ, 
+			სა&shy;დაც ეს გრა&shy;მა&shy;ტი&shy;კუ&shy;ლად და სტამ&shy;ბუ&shy;რი წე&shy;სე&shy;ბის მი&shy;ხედ&shy;ვი&shy;თაა სა&shy;ჭი&shy;რო. 
+			შე&shy;დე&shy;გად, თქვენ იღებთ ვი&shy;ზუ&shy;ა&shy;ლუ&shy;რად გა&shy;მარ&shy;თულ და პრო&shy;ფე&shy;სი&shy;ო&shy;ნა&shy;ლუ&shy;რად და&shy;ლა&shy;გე&shy;ბულ 
+			ტექსტს Word-ის დო&shy;კუ&shy;მენ&shy;ტში.
+</p>
         </div>
     </div>
     
