--- a/word-addin/src/taskpane/taskpane.html
+++ b/word-addin/src/taskpane/taskpane.html
@@ -10,18 +10,36 @@
     <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/11.0.0/css/fabric.min.css" />
 
     <style>
+        :root {
+            /* Default theme (will be overridden by JS based on Office theme) */
+            --bg-primary: #ffffff;
+            --bg-secondary: #f3f2f1;
+            --bg-header: #2b579a;
+            --text-primary: #323130;
+            --text-secondary: #605e5c;
+            --text-on-accent: #ffffff;
+            --accent-primary: #0078d4;
+            --accent-hover: #106ebe;
+            --border-color: #edebe9;
+            --shadow-color: rgba(0,0,0,0.1);
+            --shadow-strong: rgba(0,0,0,0.2);
+        }
+        
         body {
             margin: 0; padding: 0;
-            background-color: #ffffff; color: #323130;
+            background-color: var(--bg-primary);
+            color: var(--text-primary);
             display: flex; flex-direction: column; align-items: center;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             height: 100vh;
+            transition: background-color 0.3s, color 0.3s;
         }
         .header {
             width: 100%; padding: 24px 0;
-            background-color: #2b579a; color: #ffffff;
+            background-color: var(--bg-header);
+            color: var(--text-on-accent);
             display: flex; flex-direction: column; align-items: center;
-            text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+            text-align: center; box-shadow: 0 2px 5px var(--shadow-strong);
         }
         .content-main {
             width: 100%; padding: 20px; box-sizing: border-box;
@@ -36,8 +54,10 @@
         }
         #status {
             width: 100%; margin-bottom: 20px; padding: 12px;
-            background-color: #f3f2f1; border-bottom: 3px solid #0078d4;
+            background-color: var(--bg-secondary);
+            border-bottom: 3px solid var(--accent-primary);
             font-size: 13px; text-align: center; box-sizing: border-box;
+            color: var(--text-primary);
         }
         .progress-container {
             width: 100%; max-width: 300px; margin: 15px 0;
@@ -45,18 +65,19 @@
         }
         .progress-header {
             display: flex; justify-content: space-between; 
-            margin-bottom: 5px; font-size: 12px; color: #605e5c;
+            margin-bottom: 5px; font-size: 12px;
+            color: var(--text-secondary);
         }
         .progress-track {
             width: 100%; height: 8px; 
-            background-color: #edebe9; 
+            background-color: var(--border-color);
             border-radius: 4px; 
             overflow: hidden;
-            box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+            box-shadow: inset 0 1px 2px var(--shadow-color);
         }
         .progress-bar {
             width: 0%; height: 100%; 
-            background: linear-gradient(90deg, #0078d4 0%, #106ebe 100%);
+            background: linear-gradient(90deg, var(--accent-primary) 0%, var(--accent-hover) 100%);
             transition: width 0.3s ease;
             position: relative;
         }
@@ -78,53 +99,68 @@
         }
         .ms-Button {
             width: 100%; max-width: 300px; height: 48px; margin-bottom: 12px;
-            border-radius: 4px; border: 1px solid #2b579a;
-            background-color: #2b579a; color: #ffffff;
+            border-radius: 4px; border: 1px solid var(--bg-header);
+            background-color: var(--bg-header);
+            color: var(--text-on-accent);
             cursor: pointer; font-size: 14px; font-weight: 600;
             transition: all 0.2s ease-in-out;
             display: flex; align-items: center; justify-content: center;
         }
-        .ms-Button:hover { background-color: #1e3e6d; box-shadow: 0 4px 8px rgba(0,0,0,0.15); }
+        .ms-Button:hover {
+            background-color: var(--accent-hover);
+            box-shadow: 0 4px 8px var(--shadow-color);
+        }
         .ms-Button:disabled {
-            background-color: #cccccc; border-color: #cccccc;
+            background-color: var(--border-color);
+            border-color: var(--border-color);
             cursor: not-allowed; opacity: 0.6;
         }
         .ms-Button-secondary {
-            background-color: #ffffff; color: #2b579a;
-            border: 2px solid #2b579a;
+            background-color: var(--bg-primary);
+            color: var(--bg-header);
+            border: 2px solid var(--bg-header);
         }
         .ms-Button-secondary:hover {
-            background-color: #f3f2f1;
+            background-color: var(--bg-secondary);
         }
         .error-log-container {
             width: 100%; max-width: 300px; margin-top: 20px;
-            border: 1px solid #0078d4; border-radius: 4px;
-            background-color: #f0f7ff; box-sizing: border-box;
+            border: 1px solid var(--accent-primary);
+            border-radius: 4px;
+            background-color: var(--bg-secondary);
+            box-sizing: border-box;
             display: none; 
         }
         .error-log-header {
-            padding: 8px 12px; background-color: #0078d4;
-            color: #ffffff; font-size: 12px; font-weight: 600;
+            padding: 8px 12px;
+            background-color: var(--accent-primary);
+            color: var(--text-on-accent);
+            font-size: 12px; font-weight: 600;
             display: flex; justify-content: space-between; align-items: center;
         }
         .error-log-clear {
-            background: none; border: none; color: #ffffff;
+            background: none; border: none;
+            color: var(--text-on-accent);
             cursor: pointer; font-size: 11px; text-decoration: underline; padding: 0;
         }
         .error-log-clear:hover { opacity: 0.8; }
         #error-log-content {
             padding: 10px; font-family: 'Consolas', monospace;
-            font-size: 11px; color: #004578; max-height: 120px;
+            font-size: 11px;
+            color: var(--text-primary);
+            background-color: var(--bg-primary);
+            max-height: 120px;
             overflow-y: auto; white-space: pre-wrap;
         }
         .features-card {
             width: 100%; max-width: 300px; margin-top: 25px; padding: 15px;
-            border: 1px solid #edebe9; background-color: #faf9f8;
+            border: 1px solid var(--border-color);
+            background-color: var(--bg-secondary);
             border-radius: 6px; box-sizing: border-box;
         }
         .description-text { 
             font-size: 12px; 
-            color: #605e5c; 
+            color: var(--text-secondary);
             line-height: 1.6; 
             text-align: justify;
             margin: 8px 0 0 0;
@@ -133,6 +169,7 @@
             display: block;
             margin-bottom: 8px;
             font-size: 13px;
+            color: var(--text-primary);
         }
         
         /* Toggle Switch Styles */
@@ -154,7 +191,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: #ccc;
+            background-color: var(--border-color);
             transition: 0.3s;
             border-radius: 24px;
         }
@@ -165,13 +202,13 @@
             width: 18px;
             left: 3px;
             bottom: 3px;
-            background-color: white;
+            background-color: var(--text-on-accent);
             transition: 0.3s;
             border-radius: 50%;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+            box-shadow: 0 2px 4px var(--shadow-color);
         }
         input:checked + .toggle-slider {
-            background-color: #0078d4;
+            background-color: var(--accent-primary);
         }
         input:checked + .toggle-slider:before {
             transform: translateX(20px);
@@ -223,7 +260,10 @@
         <div id="error-log-container" class="error-log-container">
             <div class="error-log-header">
                 <span>📋 აქ­ტი­ვო­ბის ლო­გი</span>
-                <button id="clear-log" class="error-log-clear">გა­სუფ­თა­ვე­ბა</button>
+                <div style="display: flex; gap: 8px;">
+                    <button id="download-log" class="error-log-clear">💾 ჩამოტვირთვა</button>
+                    <button id="clear-log" class="error-log-clear">გა­სუფ­თა­ვე­ბა</button>
+                </div>
             </div>
             <div id="error-log-content"></div>
         </div>
