Word add-in updates

--- a/word-addin/src/taskpane/taskpane.html
+++ b/word-addin/src/taskpane/taskpane.html
@@ -278,11 +278,11 @@
         <div class="features-card">
             <strong>რო­გორ მუ­შა­ობს</strong>
             <p class="description-text">
-                პრო¬გრა¬მა ავ¬ტო¬მა¬ტუ¬რად შლის ძველ და¬მარ¬ცვლას (არ¬სე¬ბო¬ბის შემთ¬ხვე¬ვა¬ში) და ახლი-დან მარ¬ცვლავს ქარ¬თულ ტექსტს. გა¬და¬ტა¬ნის ნიშ¬ნე¬ბი გა¬მოჩ¬ნდე¬ბა რო¬დე¬საც გა¬მო¬ი¬ყე¬ნებთ Justify გა¬სწო¬რე¬ბას ან ჩარ¬თავთ ¶ სიმ¬ბო¬ლოს ჩვე¬ნე¬ბას.
+                პროგ­რა­მა შლის ძველ და­მარ­ცვლას (არ­სე­ბო­ბის შემ­თხვე­ვა­ში) და ავ­ტო­მა­ტუ­რად მარ­ცვლავს ქარ­თულ ტექტს. გა­და­ტა­ნის ნიშ­ნე­ბი გა­მოჩ­ნდე­ბა რო­დე­საც გა­მო­ი­ყე­ნებთ Justify გას­წო­რე­ბას ან ჩარ­თავთ ¶ სიმ­ბო­ლოს ჩვე­ნე­ბას.
             </p>
             <strong style="margin-top: 15px;">შეცდომის მონიშვნის ფუნქცია</strong>
             <p class="description-text">
-                პრო¬ბლე¬მუ¬რი პა¬რა¬გრა¬ფე¬ბი (რომ¬ლე¬ბიც ვერ და¬მუ¬შავ¬და) ავ¬ტო¬მა¬ტუ¬რად მო¬ნიშ¬ნავს ყვი-თლად. ეს და¬გე¬ხმა¬რე¬ბათ იხი¬ლოთ რა კონ¬ტენ¬ტი სა¬ჭი¬რო¬ებს ხე¬ლით შეც¬ვლას.
+                პრობ­ლე­მუ­რი პა­რაგ­რა­ფე­ბი (რომ­ლე­ბიც ვერ და­მუ­შავ­და) ავ­ტო­მა­ტუ­რად მო­ნიშ­ნე­ბა ყვით­ლად. ეს და­გეხ­მა­რე­ბათ იხი­ლოთ რო­მე­ლი პა­რაგ­რა­ფი სა­ჭი­რო­ებს ხე­ლით შეც­ვლას.
             </p>
         </div>
     </main>
