Word add-in 2.6.6

--- a/word-addin/src/commands/commands.html
+++ b/word-addin/src/commands/commands.html
@@ -5,5 +5,9 @@
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
 </head>
 <body>
+    <script>
+        Office.initialize = function() {
+        };
+    </script>
 </body>
 </html>
