--- a/word-addin/src/taskpane/taskpane.html
+++ b/word-addin/src/taskpane/taskpane.html
@@ -226,7 +226,7 @@
 <body class="ms-Fabric">
     <header class="header">
         <h1 class="ms-font-xl">Georgian Hyphenation</h1>
-        <div class="version-badge">Version 6.0-TwoPass+Progress</div>
+        <div class="version-badge">Version 2.2.6</div>
     </header>
 
     <main class="content-main">
