--- a/generate-icons.html
+++ b/generate-icons.html
@@ -11,7 +11,7 @@
   <div id="icons"></div>
 
   <script>
-    const sizes = [16, 32, 64, 80, 128];
+    const sizes = [16, 32, 64, 80, 128, 256];
     const container = document.getElementById('icons');
 
     sizes.forEach(size => {
