Word add-in 2.2.6

--- a/word-addin/src/taskpane/taskpane.html
+++ b/word-addin/src/taskpane/taskpane.html
@@ -265,10 +265,10 @@
             
             <div id="error-log-container" class="error-log-container">
                 <div class="error-log-header">
-                    <span>აქ­ტი­ვო­ბის ლო­გი</span>
+                    <span>მოვლენათა ჟურნალი</span>
                     <div style="display: flex; gap: 8px;">
-                        <button id="download-log" class="error-log-clear">💾 ჩამოტვირთვა</button>
-                        <button id="clear-log" class="error-log-clear">გა­სუფ­თა­ვე­ბა</button>
+                        <button id="download-log" class="error-log-clear">ჩამოტვირთვა</button>
+                        <button id="clear-log" class="error-log-clear">გასუფთავება</button>
                     </div>
                 </div>
                 <div id="error-log-content"></div>
